--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
+    "node-input-validator": "^4.5.1",
     "slugify": "^1.6.6",
     "uuid": "^11.1.0"
   },
