--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "knex": "^3.1.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
+    "node-cron": "^4.2.1",
     "node-input-validator": "^4.5.1",
     "slugify": "^1.6.6",
     "uuid": "^11.1.0"
